# ivf

./: README.md
generated_verifier/: Cargo.toml
generated_verifier/src/: errors.rs  field.rs  honk_structs.rs  lib.rs  proof.rs  relations.rs  transcript.rs
ink-generator/: .gitignore  Cargo.toml  vk
ink-generator/src/: main.rs
ink-generator/templates/: verifier.rs.template
ink_verifier/: Cargo.toml  lib.rs
noir-circuits/simple_secret/: Nargo.toml
noir-circuits/simple_secret/src/: main.nr
proofclient/: Cargo.toml  lib.rs
verifier/src/: lib.rs
verifier/verifier/: Cargo.toml  lib.rs
