[package]
name = "generated_verifier"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }
primitive-types = { version = "0.12.2", default-features = false, features = ["scale"] }

[dev-dependencies]
ink_e2e = "6.0.0-beta"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "primitive-types/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []